# supreme-octo-broccoli

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  convention.txt
inc/: game_state.hpp  render_stuff.hpp  utils.hpp  window.hpp
inc/game/: entity.hpp  player.hpp  room.hpp  tile.hpp
inc/states/: state_boot.hpp  state_game.hpp
resources/Rooms/: L0.txt  neutral_L0.txt  new_L0.txt  room-1.tmj  sand_L0.txt
resources/Tiles/: _tileset.tsj
src/: game_state.hpp  main.cpp  render_stuff.hpp  stack_machine.hpp  utils.cpp
src/game/: enemy.hpp  entity.cpp  entity.hpp  entity_dumb.hpp  entity_stats.cpp  entity_stats.hpp  physics.cpp  physics.hpp  player.cpp  room.cpp  room.hpp  room_from_tmj.cpp  tile.hpp
src/other/: render_stuffs.cpp
src/states/: state_boot.hpp  state_game.hpp
src/states/boot/: state_boot.cpp
src/states/game/: compute.cpp  get_events.cpp  give_render_stuffs.cpp  state_game.cpp
src/window/: get_render_stuffs.cpp  give_events.cpp  render.cpp  window.cpp
